Fix header gap and map height

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,15 @@
 @import '../styles/theme';
 
 :host {
-  bottom: 0;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  top: 64px;
   width: 100%;
+  height: 100%;
 }
 
 .toolbar {
   background-color: mat-color($kel-primary, 'default');
   color: mat-color($kel-primary, 'default-contrast');
-  position: fixed;
-  top: 0;
   z-index: 2;
   box-shadow: 0 1px mat-color($kel-foreground, divider);
 }
@@ -44,9 +40,10 @@
 
 .page {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .content {
   width: 100%;
+  height: 100%;
 }
