--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,4 +23,5 @@ body {
   font-size: mat-font-size($kel-typography, body-1);
   height: 100%;
   margin: 0;
+  overflow: hidden;
 }
